# lb_lammps

lammps_install/lib64/cmake/LAMMPS/: LAMMPSConfigVersion.cmake  LAMMPS_Targets.cmake
lammps_install/lib64/pkgconfig/: liblammps.pc
lb_dem/: CMakeLists.txt  dem_main  log.txt  main.cpp  submit_adhesive.slurm
lb_dem/input/: in.lammps
lb_dem/plugins/lbforce/: CMakeLists.txt  fix_lb_force.cpp  fix_lb_force.h  lbforceplugin.cpp
lb_dem/src/: CMakeLists.txt  main.cpp
lb_dem/src/input/: in.lammps
my_lbplugin/: CMakeLists.txt  fix_lb_force.cpp
